test_data/invalid/2.10_near_grid_miss.ldr
0 Near grid miss
1 4 0 -24 0 1 0 0 0 1 0 0 0 1 3001.dat
1 15 5 -48 0 1 0 0 0 1 0 0 0 1 3001.dat